--- a/unlisted_web_page_karbytes_24_february_2024.html
+++ b/unlisted_web_page_karbytes_24_february_2024.html
@@ -26,7 +26,7 @@ karbytes_1: "Zero factorial is one because, if it was not, all factorials would 
 
 karbytes_0: "Why is any number to the power of zero one instead of zero?"
 
-karbytes_1: "Any number to the power of zero for the same reason that dividing any number by zero is infinity. One can be divided into infinitely many numbers but the result of dividing zero by any number except for zero is always zero."
+karbytes_1: "Any number to the power of zero is one for the same reason that dividing any number by zero is infinity. One can be divided into infinitely many numbers but the result of dividing zero by any number except for zero is always zero."
 </pre>
 <hr />
 <p>This web page was last updated on 23_FEBRUARY_2024. The content displayed on this web page is licensed as <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
