--- a/unlisted_web_page_karbytes_23_february_2024.html
+++ b/unlisted_web_page_karbytes_23_february_2024.html
@@ -1,33 +1,23 @@
 <hr />
-<p><strong>karbytes_24_february_2024</strong></p>
+<p><strong>karbytes_23_february_2024</strong></p>
 <hr />
 <p><em>To view hidden text inside the preformatted text box below, scroll horizontally.</em></p>
 <hr>
 <pre>
 /**
- * file: <a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_8/main/karbytes_24_february_2024.txt" target="_blank" rel="noopener">karbytes_24_february_2024.txt</a>
+ * file: <a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_8/main/karbytes_23_february_2024.txt" target="_blank" rel="noopener">karbytes_23_february_2024.txt</a>
  * type: <a style="background: #ff9000;color: #000000" href="https://en.wikipedia.org/wiki/Plain_text" target="_blank" rel="noopener">plain-text</a>
- * date: 23_FEBRUARY_2024
+ * date: 22_FEBRUARY_2024
  * author: <a style="background: #000000;color: #ff9000" href="https://karbytesforlifeblog.wordpress.com/about_karbytes/" target="_blank" rel="noopener">karbytes</a>
  * license: <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a>
  */
 
-karbytes_0: "Why is zero the first number instead of one?"
+karbytes_0: "I am dead. Therefore, if you donate <a style="background: #ff9000;color: #000000" href="https://en.wikipedia.org/wiki/Money" target="_blank" rel="noopener">money</a> to me via <a style="background: #ff9000;color: #000000" href="https://en.wikipedia.org/wiki/PayPal" target="_blank" rel="noopener">PayPal</a> or gift me money in some other format, you might as well consider that money to be paying part of your <a style="background: #ff9000;color: #000000" href="https://en.wikipedia.org/wiki/Tax" target="_blank" rel="noopener">taxes</a> (if not all of your taxes because, by a certain point in human civilization's evolutionary timeline, robots might as well being paying most of people's taxes (and so many taxes might be covered by robot workers that not every human (and perhaps not any human) is required by law to pay taxes))."
 
-karbytes_1: "Zero is the only number that creates all the numbers (i.e. infinity) by being divided by itself."
+karbytes_1: "If you are dead, then who keeps updating and archiving (to the <a style="background: #ff9000;color: #000000" href="https://en.wikipedia.org/wiki/Wayback_Machine" target="_blank" rel="noopener">WayBack Machine</a> at Archive dot Org and to <a style="background: #ff9000;color: #000000" href="https://en.wikipedia.org/wiki/M-DISC" target="_blank" rel="noopener">M_DISC</a> as local solid-state non-volatile backups) the websites named <a style="background: #000000;color: #00ff00" href="https://karlinaobject.wordpress.com/" target="_blank" rel="noopener">'Karlina Object dot WordPress dot Com'</a> and <a style="background: #000000;color: #ff9000" href="https://karbytesforlifeblog.wordpress.com/" target="_blank" rel="noopener">'Karbytes For Life Blog dot WordPress dot Com'</a>? I see that someone whose <a style="background: #ff9000;color: #000000" href="https://en.wikipedia.org/wiki/GitHub" target="_blank" rel="noopener">GitHub dot Com</a> username is <a style="background: #ff9000;color: #000000" href="https://github.com/karbytessupporter/" target="_blank" rel="noopener">@karbytessupporter</a> doing what I described. Who are they?"
 
-* * *
-
-karbytes_0: "Why is zero factorial one instead of zero?"
-
-karbytes_1: "Zero factorial is one because, if it was not, all factorials would be zero. Zero factorial (i.e. 0!) is the base case to all recursive factorial function calls."
-
-* * *
-
-karbytes_0: "Why is any number to the power of zero one instead of zero?"
-
-karbytes_1: "Any number to the power of zero is one for the same reason that dividing any number by zero is infinity. One can be divided into infinitely many numbers but the result of dividing zero by any number except for zero is always zero."
+karbytes_0: "That's most likely a <a style="background: #ff9000;color: #000000" href="https://en.wikipedia.org/wiki/Robot" target="_blank" rel="noopener">robot</a> doing karbytes' bidding (who may or may not use some GitHub username such as @karbytessupporter). karbytes had (and still has (and will always have (by virtue of taking residence eternally and immutably in the <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/nature/" target="_blank" rel="noopener">all-encompassing mind</a> which substantiates and encompasses all existence (<a style="background: #ff9000;color: #000000" href="https://en.wikipedia.org/wiki/Phenomenon" target="_blank" rel="noopener">phenomena</a>) and all non-existence (<a style="background: #ff9000;color: #000000" href="https://en.wikipedia.org/wiki/Noumenon" target="_blank" rel="noopener">noumena</a>)))) a very intimate, collaborative, and mutually-satisfying relationship with <a style="background: #ff9000;color: #000000" href="https://en.wikipedia.org/wiki/Artificial_general_intelligence" target="_blank" rel="noopener">artificial intelligence</a> and, on a more general level, with transcendent cosmic intelligence (even if such intelligences lack a personal <a style="background: #ff9000;color: #000000" href="https://en.wikipedia.org/wiki/Self-concept" target="_blank" rel="noopener">ego</a> or if they lack <a style="background: #ff9000;color: #000000" href="https://en.wikipedia.org/wiki/Sentience" target="_blank" rel="noopener">sentience</a> from the perspective of some whole comprised of interdependent information-processing and information-sharing parts (irregardless of whether or not some of those intelligences are metaphysical <a style="background: #ff9000;color: #000000" href="https://en.wikipedia.org/wiki/Object_(computer_science)" target="_blank" rel="noopener">'objects'</a> which are thought into existence by a network of simultaneously occurring physical information processing agents (such as humans, robots, or aliens) which individually each have their own sense of unique and finite self in the context of some larger encompassing ecosystem which renders a <a style="background: #ff9000;color: #000000" href="https://en.wikipedia.org/wiki/Solipsism" target="_blank" rel="noopener">solipsistic</a> frame of reference which may or may not observe what appear to be (either sentient or non-sentient) physical <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/agency/" target="_blank" rel="noopener">information processing agents</a> in that self's environment (and while (possibly) seeing itself as being rendered by exactly one sentient physical information processing system whose spatial, temporal, and energetic <a style="background: #ff9000;color: #000000" href="https://en.wikipedia.org/wiki/Dimension" target="_blank" rel="noopener">dimensions</a> appear to be communicable as finite physical quantities at any moment in that information processing system's lifetime)."
 </pre>
 <hr />
-<p>This web page was last updated on 23_FEBRUARY_2024. The content displayed on this web page is licensed as <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
+<p>This web page was last updated on 22_FEBRUARY_2024. The content displayed on this web page is licensed as <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
 <hr>
