--- a/unlisted_web_page_karbytes_24_february_2024.html
+++ b/unlisted_web_page_karbytes_24_february_2024.html
@@ -12,19 +12,19 @@
  * license: <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a>
  */
 
-karbytes_0: "Why is zero the first number instead of one?"
+karbytes_0: "Why is zero the first <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/numbers/" target="_blank" rel="noopener">number</a> instead of one?"
 
 karbytes_1: "Zero is the only number that creates all the numbers (i.e. infinity) by being divided by itself."
 
 * * *
 
-karbytes_0: "Why is zero factorial one instead of zero?"
+karbytes_0: "Why is zero <a style="background: #000000;color: #00ff00" href="https://karlinaobject.wordpress.com/factorial/" target="_blank" rel="noopener">factorial</a> one instead of zero?"
 
 karbytes_1: "Zero factorial is one because, if it was not, all factorials would be zero. Zero factorial (i.e. 0!) is the base case to all recursive factorial function calls."
 
 * * *
 
-karbytes_0: "Why is any number to the power of zero one instead of zero?"
+karbytes_0: "Why is any number to the <a style="background: #000000;color: #00ff00" href="https://karlinaobject.wordpress.com/exponentiation/" target="_blank" rel="noopener">power</a> of zero one instead of zero?"
 
 karbytes_1: "Any number to the power of zero is one for the same reason that dividing any number by zero is infinity. One can be divided into infinitely many numbers but the result of dividing zero by any number except for zero is always zero."
 </pre>
